// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PortfolioPie matches snapshot with default data 1`] = `
<section
  aria-label="Portfolio distribution"
  class="rounded-2xl border border-gray-200 dark:border-white/10 bg-white dark:bg-zinc-900/60 p-5 shadow-sm"
  data-testid="portfolio-pie"
>
  <header
    class="mb-4 flex items-center justify-between"
  >
    <h2
      class="text-base font-semibold text-gray-900 dark:text-white"
    >
      Portfolio Distribution
    </h2>
    <span
      class="text-xs text-gray-500 dark:text-gray-400 tabular-nums"
    >
      Total staked: 
      58
       
      XLM
    </span>
  </header>
  <table
    class="sr-only"
    data-testid="portfolio-pie-sr-table"
    summary="Portfolio distribution by prediction status"
  >
    <caption>
      Portfolio distribution by prediction status
    </caption>
    <thead>
      <tr>
        <th
          scope="col"
        >
          Status
        </th>
        <th
          scope="col"
        >
          Amount (
          XLM
          )
        </th>
        <th
          scope="col"
        >
          Percentage
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Active
        </td>
        <td>
          10
        </td>
        <td>
          17.2
          %
        </td>
      </tr>
      <tr>
        <td>
          Pending
        </td>
        <td>
          5
        </td>
        <td>
          8.6
          %
        </td>
      </tr>
      <tr>
        <td>
          Won
        </td>
        <td>
          28
        </td>
        <td>
          48.3
          %
        </td>
      </tr>
      <tr>
        <td>
          Lost
        </td>
        <td>
          15
        </td>
        <td>
          25.9
          %
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th
          scope="row"
        >
          Total
        </th>
        <td>
          58
        </td>
        <td>
          100%
        </td>
      </tr>
    </tfoot>
  </table>
  <div
    aria-hidden="true"
    class="h-52 sm:h-64 w-full"
  >
    <div
      data-testid="recharts-responsive-container"
    >
      <svg
        data-testid="recharts-pie-chart"
      >
        <g
          data-testid="recharts-pie"
        >
          <g
            data-slice="Active"
          />
          <g
            data-slice="Pending"
          />
          <g
            data-slice="Won"
          />
          <g
            data-slice="Lost"
          />
        </g>
      </svg>
    </div>
  </div>
  <ul
    aria-label="Portfolio legend"
    class="mt-4 grid grid-cols-2 gap-x-6 gap-y-2.5 sm:grid-cols-2"
  >
    <li
      class="flex items-center gap-2.5 min-w-0"
    >
      <span
        aria-hidden="true"
        class="flex-shrink-0 h-3 w-3 rounded-full"
        style="background-color: rgb(124, 58, 237);"
      />
      <span
        class="truncate text-sm text-gray-700 dark:text-gray-300"
      >
        Active
      </span>
      <span
        class="ml-auto flex-shrink-0 font-semibold text-sm text-gray-900 dark:text-white tabular-nums"
      >
        10
        <span
          class="ml-1 text-xs font-normal text-gray-500 dark:text-gray-400"
        >
          XLM
        </span>
      </span>
      <span
        class="flex-shrink-0 text-xs text-gray-400 dark:text-gray-500 tabular-nums w-10 text-right"
      >
        17.2
        %
      </span>
    </li>
    <li
      class="flex items-center gap-2.5 min-w-0"
    >
      <span
        aria-hidden="true"
        class="flex-shrink-0 h-3 w-3 rounded-full"
        style="background-color: rgb(245, 158, 11);"
      />
      <span
        class="truncate text-sm text-gray-700 dark:text-gray-300"
      >
        Pending
      </span>
      <span
        class="ml-auto flex-shrink-0 font-semibold text-sm text-gray-900 dark:text-white tabular-nums"
      >
        5
        <span
          class="ml-1 text-xs font-normal text-gray-500 dark:text-gray-400"
        >
          XLM
        </span>
      </span>
      <span
        class="flex-shrink-0 text-xs text-gray-400 dark:text-gray-500 tabular-nums w-10 text-right"
      >
        8.6
        %
      </span>
    </li>
    <li
      class="flex items-center gap-2.5 min-w-0"
    >
      <span
        aria-hidden="true"
        class="flex-shrink-0 h-3 w-3 rounded-full"
        style="background-color: rgb(16, 185, 129);"
      />
      <span
        class="truncate text-sm text-gray-700 dark:text-gray-300"
      >
        Won
      </span>
      <span
        class="ml-auto flex-shrink-0 font-semibold text-sm text-gray-900 dark:text-white tabular-nums"
      >
        28
        <span
          class="ml-1 text-xs font-normal text-gray-500 dark:text-gray-400"
        >
          XLM
        </span>
      </span>
      <span
        class="flex-shrink-0 text-xs text-gray-400 dark:text-gray-500 tabular-nums w-10 text-right"
      >
        48.3
        %
      </span>
    </li>
    <li
      class="flex items-center gap-2.5 min-w-0"
    >
      <span
        aria-hidden="true"
        class="flex-shrink-0 h-3 w-3 rounded-full"
        style="background-color: rgb(244, 63, 94);"
      />
      <span
        class="truncate text-sm text-gray-700 dark:text-gray-300"
      >
        Lost
      </span>
      <span
        class="ml-auto flex-shrink-0 font-semibold text-sm text-gray-900 dark:text-white tabular-nums"
      >
        15
        <span
          class="ml-1 text-xs font-normal text-gray-500 dark:text-gray-400"
        >
          XLM
        </span>
      </span>
      <span
        class="flex-shrink-0 text-xs text-gray-400 dark:text-gray-500 tabular-nums w-10 text-right"
      >
        25.9
        %
      </span>
    </li>
  </ul>
</section>
`;

exports[`PortfolioPie matches snapshot with zero data 1`] = `
<section
  aria-label="Portfolio distribution"
  class="rounded-2xl border border-gray-200 dark:border-white/10 bg-white dark:bg-zinc-900/60 p-5 shadow-sm"
  data-testid="portfolio-pie"
>
  <header
    class="mb-4 flex items-center justify-between"
  >
    <h2
      class="text-base font-semibold text-gray-900 dark:text-white"
    >
      Portfolio Distribution
    </h2>
  </header>
  <table
    class="sr-only"
    data-testid="portfolio-pie-sr-table"
    summary="Portfolio distribution by prediction status"
  >
    <caption>
      Portfolio distribution by prediction status
    </caption>
    <thead>
      <tr>
        <th
          scope="col"
        >
          Status
        </th>
        <th
          scope="col"
        >
          Amount (
          XLM
          )
        </th>
        <th
          scope="col"
        >
          Percentage
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Active
        </td>
        <td>
          0
        </td>
        <td>
          0.0
          %
        </td>
      </tr>
      <tr>
        <td>
          Pending
        </td>
        <td>
          0
        </td>
        <td>
          0.0
          %
        </td>
      </tr>
      <tr>
        <td>
          Won
        </td>
        <td>
          0
        </td>
        <td>
          0.0
          %
        </td>
      </tr>
      <tr>
        <td>
          Lost
        </td>
        <td>
          0
        </td>
        <td>
          0.0
          %
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th
          scope="row"
        >
          Total
        </th>
        <td>
          0
        </td>
        <td>
          100%
        </td>
      </tr>
    </tfoot>
  </table>
  <div
    class="flex flex-col items-center justify-center py-10 text-gray-400 dark:text-gray-500 gap-2"
  >
    <svg
      aria-hidden="true"
      class="h-12 w-12 opacity-30"
      fill="none"
      stroke="currentColor"
      stroke-width="1.5"
      viewBox="0 0 24 24"
    >
      <path
        d="M11 5.882V19.24a1.76 1.76 0 01-3.417.592l-2.147-6.15M18 13a3 3 0 100-6M5.436 13.683A4.001 4.001 0 017 6h1.832c4.1 0 7.625-1.234 9.168-3v14c-1.543-1.766-5.067-3-9.168-3H7a3.988 3.988 0 01-1.564-.317z"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
    <p
      class="text-sm"
    >
      No staked positions yet
    </p>
  </div>
</section>
`;
